--- a/src/App.css
+++ b/src/App.css
@@ -19,19 +19,26 @@
 /* Banner.css */
 .banner-content {
   /* height: 100vh;  */
+  /* width: 100%; */
   /* display: flex; */
   /* align-items: center; */
-  background-color: #d2d5d7;
+  /* background-color: #d2d5d7; */
 }
 
 .text-section {
   /* padding: 20px; */
   background-color: #1C2458;
+  width: 40%;
   color: #faf7f7;
   height: 89vh;
   padding: 0;
   margin: 0;
   text-align: center;
+}
+
+.text{
+  margin-left: 0 30px;
+  padding: 30px;
 }
 
 .image-section {
@@ -41,19 +48,23 @@
   background-color:  #d2d5d7;
   padding: 0;
   margin: 0;
-  height: 89vh;
+  height: auto;
 }
 
 .image-section img {
-  max-width: 100%;
+  /* width: 100%;
+  height: 100%; */
+  /* height: 10vh; */
+  width: 100%;
+  height: 89vh;
   
   border-radius: 8px;
 }
 
 .banner-container {
   position: relative;
-  width: 100%;
-  max-height: 500px;
+  /* width: 100%; */
+  /* max-height: 700px; */
   overflow: hidden;
 }
 
@@ -79,5 +90,22 @@
   padding: 20px;
   border-radius: 8px;
   width: 100%;
+}
+
+.country {
+  padding: 0 60px;
+  list-style-type: none;
+  text-align: center;
+  justify-content: center;
+  font-size: 10px;
+}
+
+.country1 {
+  list-style-type: none;
+  text-align: center;
+  justify-content: center;
+  font-size: 10px;
+  padding: 0 10px;
+  grid: auto / auto auto auto;
 }
 
