--- a/src/App.css
+++ b/src/App.css
@@ -109,3 +109,21 @@
   grid: auto / auto auto auto;
 }
 
+/* ImageCard.css */
+.card-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-top: 15px;
+}
+
+.card-text {
+  font-size: 1rem;
+  color: #555;
+  margin-top: 10px;
+}
+
+.img-fluid {
+  object-fit: cover;
+}
+
+
